Limit image stretch to bottom of screen Fixes #30

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     background-color: #c3ffeb;
     margin: 0;
     padding: 20px;
+    overflow-y: scroll;
 }
 
 h1 {
